# cookiecutter-cpp

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: CMakeLists.txt
{{cookiecutter.repo_name}}/src/: CMakeLists.txt
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: CMakeLists.txt  main.cpp  tools.cpp  tools.h  utils.cpp  utils.h  {{ cookiecutter.project_name }}.cpp  {{cookiecutter.repo_name}}_utils.cpp  {{cookiecutter.repo_name}}_utils.h
{{cookiecutter.repo_name}}/test/: CMakeLists.txt  testBlah.cpp  testSum.cpp  testTools.cpp  testUtils.cpp  test{{cookiecutter.repo_name}}_utils.cpp
